Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Tue Jan 21 00:44:03 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-save.c (escape_string_and_dup): correctly escape the
	file we're saving.

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

Thu Jan 16 02:32:39 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-details.c (gnome_theme_details_update_from_gconf):
	make sure we're initted, as this function can be run
	asynchronously.

	* gnome-theme-manager.c (gnome_meta_theme_installer_run_cb): hook
	up the installer.

	* gnome-theme-installer.c: Try to handle icon themes.

Wed Jan 15 20:15:31 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-manager.c (gnome_theme_manager_tree_sort_func): 
	remove this unneeded sort func.

	* gnome-theme-details.c (setup_tree_view): use the right sort
	function.

2003-01-14  Jody Goldberg <jody@gnome.org>

	* gnome-theme-manager.c (load_meta_themes) : yet another place to
	handle NULL window manager.

2003-01-14  Alex Duggan  <aldug@gnome.org>
	
	* gnome-theme-manager.c (main): 
	s/gnome-theme-properties/gnome-theme-manager/  Fixes #103525

Tue Jan 14 02:16:22 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (load_meta_themes): set the correct row to
	the new data.  This was messing a lot up.  Saving now works, so
	long as you don't type bad data.

	* TODO: update.

2003-01-13  Jody Goldberg <jody@gnome.org>

	* gnome-theme-manager.c (load_meta_themes) : handle yet another place
	  where gnome_wm_manager_get_current may be NULL.

Mon Jan 13 15:20:17 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-manager.c (main): gnome_theme_init ()

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Makefile.am (EXTRA_DIST) : dist the pixmaps too.
