@@ -1,3 +1,10 @@
+Wed Feb  5 17:03:26 2003  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.[ch] (get_default_string_from_key): get the
+	default from the schema and always sort it at the top.
+
+	* gnome-theme-details.c: ditto
+
 Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* Release 2.2.0.1
